# UPC-Studies

./: .bashrc  .gitignore
BackUp/BackUp_Sys/: .bashrc
Backup/Backup_Sys/: .bashrc
Licence_Informatique/: .~lock.UE.ods#  UE.ods
Licence_Informatique/L2/AAL/: Rep.txt
Licence_Informatique/L2/POO/: Ex1.txt  Le_Franc_Matthieu.tar  Main.java
Licence_Informatique/L3/S5/PF/TP/TP8/pf5-tp-morpion/partie-1/: 8.1_morpion_debut.ml  README.md  dune  matrix.ml  metamorpion.sh  metamorpion_debut.ml  metamorpion_imperatif.ml  metamorpion_victoire.ml  morpion.sh  morpion_imperatif.ml
Licence_Informatique/L3/S5/PF/TP/TP8/pf5-tp-morpion/partie-1/_build/: .digest-db  log
Licence_Informatique/L3/S5/PF/TP/TP8/pf5-tp-morpion/partie-1/_build/default/: morpion_debut.ml  morpion_imperatif.pp.ml
Licence_Informatique/L3/S5/PF/TP/TP8/pf5-tp-morpion/partie-1/_build/default/.morpion_imperatif.eobjs/: dune__exe__Morpion_imperatif.impl.all-deps  morpion_debut.ml.d  morpion_imperatif.pp.ml.d
Licence_Informatique/L3/S5/PF/TP/TP8/pf5-tp-morpion/partie-2/: README.md  dune  graphics_extra.ml  matrix.ml  metamorpion.ml  metamorpion.sh  metamorpion_debut.ml  metamorpion_victoire.ml  morpion.ml  morpion.sh  morpion_debut.ml
M2_IMPAIRS/Fouille/: td1.py  test1.py
M2_IMPAIRS/Internet/tp1/: notes.md
Master1_IMPAIRS/: UE.ods
Master1_IMPAIRS/PCM_examen/: settings.gradle
Master1_IMPAIRS/PCM_examen/app/: build.gradle
Master1_IMPAIRS/S1/Algorithmique/: TD4_bonus.py  src.txt
Master1_IMPAIRS/S1/CA/: .mult_naive.asm.swp  .strlen.asm.swp  Verrou.circ
Master1_IMPAIRS/S1/Concurence/: enseignant.txt
Master1_IMPAIRS/S1/PM/: settings.gradle
Master_IMPAIRS/: UE.ods
Master_IMPAIRS/M1/: .~lock.UE.ods#
licence/: UE.ods
master/: UE.ods
(+2109 files in other folders)
