(env (_ (flags :standard -w -27-26-32-33)))

(library
 (name morpion_lib)
 (libraries graphics)
 (modules graphics_extra matrix morpion_prelude morpion_victoire))

(executable
 (name morpion)
 (libraries morpion_lib graphics)
 (modules morpion_debut morpion)
 (flags -open Morpion_lib -open Morpion_prelude))

(library
 (name metamorpion_lib)
 (libraries morpion_lib)
 (modules metamorpion_prelude)
 (flags -open Morpion_lib))

(executable
 (name metamorpion)
 (libraries metamorpion_lib graphics)
 (modules metamorpion_debut metamorpion_victoire metamorpion)
 (flags -open Morpion_lib -open Metamorpion_lib -open Metamorpion_prelude))

